fix markdown link

--- a/【文章目录】/2-对外演讲、采访/03-2008-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/03-2008-段永平浙大分享.md
@@ -28,9 +28,10 @@ context:
 
 ```
 
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-21-05.png)
 
-![[PixPin_2026-01-19_22-21-05.png]]
-![[PixPin_2026-01-19_22-22-06.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-22-06.png)
+
 
 **00:05** 【主持人】
 欢迎大家来到自立成长与段永平学长面对面交流会的现场。首先请允许我荣幸地向大家介绍今天来到我们现场的各位老师，他们是来自发展联络办公室以及学工部的各位老师们，让我们用热烈的掌声欢迎他们。
