--- a/【文章目录】/2-对外演讲、采访/05-2004-万科财富人生-对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/05-2004-万科财富人生-对话段永平.md
@@ -31,7 +31,8 @@ context:
 ```
 
 
-![[PixPin_2026-01-20_00-05-31.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_00-05-31.png)
+
 
 **00:00** 【旁白】
 被业界称为未来的亚洲商业领袖。他曾用两个亿成为央视标王，在媒体上演绎付出总有回报的传奇。两年前他突然消失在众人的视线中，两年后人们在百富榜上又看到了他熟悉的身影。本期《财富人生》，步步高董事长段永平向您讲述他的快乐人生。
