--- a/【文章目录】/2-对外演讲、采访/06-2006-资本人物-专访段永平.md
+++ b/【文章目录】/2-对外演讲、采访/06-2006-资本人物-专访段永平.md
@@ -30,7 +30,8 @@ context:
 ```
 
 
-![[PixPin_2026-01-20_00-09-53.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_00-09-53.png)
+
 
 
 **00:36** 【旁白】 资本人物之——段永平。
