--- a/【文章目录】/2-对外演讲、采访/08-2004（左右）-段永平北大总裁班演讲：企业的诚信意识.md
+++ b/【文章目录】/2-对外演讲、采访/08-2004（左右）-段永平北大总裁班演讲：企业的诚信意识.md
@@ -30,11 +30,9 @@ context:
 
 ```
 
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_10-58-12.png)
 
-
-![[PixPin_2026-01-20_10-58-12.png]]
-
-![[PixPin_2026-01-20_10-58-24 1.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_10-58-24.png)
 
 
 **00:05** 【旁白】
