--- a/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
@@ -1,7 +1,7 @@
 
 # 段永平2025年第一站浙大交流会 全录版转录
 
-| 视频链接： https://www.bilibili.com/video/BV11erPYhEHx
+视频链接： https://www.bilibili.com/video/BV11erPYhEHx
 文稿转录：Gemini 3.0 Pro Preview
 整理人：@杨不为
 转录Prompt：
@@ -33,9 +33,7 @@ context:
 ```
 
 
-
-![[PixPin_2026-01-20_17-18-31.png]]
-
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_17-18-31.png)
 
 
 
