--- a/【文章目录】/4-网易博客集/597-关于段永平的学位和学历.md
+++ b/【文章目录】/4-网易博客集/597-关于段永平的学位和学历.md
@@ -5,8 +5,7 @@
 
 1988年7月中国人民大学经济系研究生班毕业，由于没在规定时间内交论文故无硕士学位。
 
-补充一点：我还在中欧读过EMBA，好像是2000年入校的。由于没有完成所有课程，也没有学位。中欧有不少课程都很好，但也有些课程是我不需要的（和老师讲的好坏没关系），所以逃课了
-。
+补充一点：我还在中欧读过EMBA，好像是2000年入校的。由于没有完成所有课程，也没有学位。中欧有不少课程都很好，但也有些课程是我不需要的（和老师讲的好坏没关系），所以逃课了。
 
 网上乱传的博士，硕士都不对。特此说明。
 
