--- a/【文章目录】/1-核心-公司里程碑/07-2025-沈炜：步步高（vivo）30周年：坚守本分 基业长青.md
+++ b/【文章目录】/1-核心-公司里程碑/07-2025-沈炜：步步高（vivo）30周年：坚守本分 基业长青.md
@@ -15,7 +15,7 @@
 30 年前，在阿段的带领下，一群怀揣梦想的年轻人，带着对做出好产品的热爱和本分做事的初心，创立了步步高。30 年，对于一个人来说，是从懵懂少年迈入而立之年，但对于一个以追求更健康、更长久为愿景的企业来说，**30 年远非壮丽，仅仅是基业长青的开端** ，是我们坚守本分之道、胸怀热爱再出发的序章。
 
 
-![[Pasted image 20260117154235.png]]
+![Pasted image 20260117154235.png](<Pasted image 20260117154235.png>)
 
 
 这一路，我们从不执着于"果"的表象，无论是市场份额还是经营数字。**果不可求，亦无须求。** 我们唯一要做的，就是埋头把"因"种好。阿段开创的以本分为核心的企业文化，是我们企业健康成长到今天的最根本之所在。30 年一路践行、一路沉淀，最宝贵的财富莫过于这些根植于本分的"因"。**本分，就是永远保持一颗平常心，凡事回归事物本原去思考，排除压力、痛苦、诱惑等一切干扰，尤其是在要付出代价的时候，坚持做正确的事，并力求把事情做正确。**
