--- a/【文章目录】/2-对外演讲、采访/01-2007-波士堂专访段永平，谈价值投资，上市，企业.md
+++ b/【文章目录】/2-对外演讲、采访/01-2007-波士堂专访段永平，谈价值投资，上市，企业.md
@@ -20,8 +20,7 @@ https://www.bilibili.com/video/BV1ww411X7Pd
 **mm:ss** 【xxx】 .....
 ```
 
-
-![[PixPin_2026-01-19_22-19-54.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-19-54.png)
 
 **00:05** 【曹启泰】
 他们分别是来自浙江大学以及交通大学的同学们、朋友们，欢迎大家。
