--- a/【文章目录】/2-对外演讲、采访/02-2006-秦朔专访段永平.md
+++ b/【文章目录】/2-对外演讲、采访/02-2006-秦朔专访段永平.md
@@ -21,7 +21,8 @@ https://www.bilibili.com/video/BV1ww411X7Pd
 **mm:ss** 【xxx】 .....
 ```
 
-![[PixPin_2026-01-19_22-20-24.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-20-24.png)
+
 
 
 **00:00** 【秦朔】
