--- a/【文章目录】/2-对外演讲、采访/04-2010-网易财经-对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/04-2010-网易财经-对话段永平.md
@@ -29,7 +29,8 @@ context:
 
 ```
 
-![[PixPin_2026-01-19_23-29-31.png]]
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_23-29-31.png)
+
 
 **00:10** 【旁白】 他亲手缔造了两个知名品牌，却能急流勇退；他活跃于投资领域，被称为“中国的巴菲特”。
 
