--- a/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
+++ b/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
@@ -1,3 +1,12 @@
+# 2018-段永平斯坦福交流
+
+> URLs:  https://www.huxiu.com/article/265373.html
+> Link:    
+> Category: #2-对外采访、演讲    
+> Tag:    
+> Editor: @杨不为     
+
+（编者按：未找到一手音视频资料，但此文章经过段永平本人网易博客评论区认证，截图见文末。）
 # 2018年段永平斯坦福连答53问，核心是"不为清单"
 
 [www.huxiu.com](https://www.huxiu.com/article/265373.html) 虎嗅网  
