--- a/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
@@ -1,41 +1,13 @@
+# 2025-段永平浙大分享
 
-# 段永平2025年第一站浙大交流会 全录版转录
+> URLs:  https://www.bilibili.com/video/BV11erPYhEHx  
+> Link:    
+> Category: #2-对外采访、演讲    
+> Tag:    
+> Editor: @杨不为     
 
-视频链接： https://www.bilibili.com/video/BV11erPYhEHx  
-文稿转录：Gemini 3.0 Pro Preview  
-整理人：@杨不为  
-转录Prompt：  
-
-```
-
-请转录这个视频的完整内容。请：
-提取所有对话和旁白文字
-如果有字幕，请以字幕为准
-按时间顺序整理
-标注说话人（如果能识别）
-在保持原文的准确性、完整性的前提下，优化文本，去除口语垫词、填充词和一些重复，去除明显的口误和口语表达等、呈现为更加连贯、易阅读的形式。
-请以清晰的文本格式输出。
-
-整理成这种格式：
-
-**mm:ss** 【xxx】 内容
-
-**mm:ss** 【xxx】 内容
-
-（几个片段分开转录的，需要加下面的）
-
-时间标点从 xx:00 开始
-
-context:
-
-...
-
-```
-
-
-![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_17-18-31.png)  
-
-
+  
+![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_22-43-11.png)
 
 
 **00:00** 【男主持人】  
