--- a/【文章目录】/2-对外演讲、采访/11-2025-雪球-方三文对话段永平，做自己能够喜欢的事情很重要.md
+++ b/【文章目录】/2-对外演讲、采访/11-2025-雪球-方三文对话段永平，做自己能够喜欢的事情很重要.md
@@ -1,39 +1,13 @@
-# 方三文对话段永平，做自己能够喜欢的事情很重要
+# 2025-雪球-方三文对话段永平
 
-视频出处： https://www.bilibili.com/video/BV1X5krBGEsa  
+> URLs:  https://www.bilibili.com/video/BV1X5krBGEsa  
+> Link:    
+> Category: #2-对外采访、演讲    
+> Tag:    
+> Editor: @杨不为     
 
-文稿转录：Gemini 3.0 Pro Preview  
-整理人：@杨不为  
-转录Prompt：  
-
-```
-
-请转录这个视频的完整内容。请：
-提取所有对话和旁白文字
-如果有字幕，请以字幕为准
-按时间顺序整理
-标注说话人（如果能识别）
-在保持原文的准确性、完整性的前提下，优化文本，去除口语垫词、填充词和一些重复，去除明显的口误和口语表达等、呈现为更加连贯、易阅读的形式。
-请以清晰的文本格式输出。
-
-整理成这种格式：
-
-**mm:ss** 【xxx】 内容
-
-**mm:ss** 【xxx】 内容
-
-（几个片段分开转录的，需要加下面的）
-
-时间标点从 xx:00 开始
-
-context:
-
-...
-
-```
-
+  
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_19-03-14.png)  
-
 
 
 **00:47** 【方三文】 大家好，我是方三文，雪球创始人、董事长，也是雪球上的不明真相的群众。我对自己的简介是：陪聊、陪赌。那么跟谁聊呢？有可能是跟上市公司的CEO聊，聊一聊他们公司的商业模式，他们的行业竞争力；也有可能是跟基金经理聊，聊他们的投资理念、投资框架和具体的投资行为；也有可能跟经济学家聊，聊一聊他们对经济形势的看法。那么呢，我可以把大家的问题带给他们，帮大家跟他们聊。也可以理解我是大家的代问人。  
