--- a/【文章目录】/2-对外演讲、采访/12-2025-王石对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/12-2025-王石对话段永平.md
@@ -1,17 +1,10 @@
 # 2025-王石对话段永平
 
-视频出处： https://www.youtube.com/watch?v=tNxN21LWnmY  
-文稿转录：Gemini 3.0 Pro Preview  
-整理人：@杨不为  
-转录Prompt：  
-```
-请转录这个视频的完整内容。视频中已包含字幕，请：  
-提取所有对话和旁白文字  
-按时间顺序整理  
-标注说话人（如果能识别）  
-保持原文的准确性  
-请以清晰的文本格式输出。
-```
+> URLs:  https://www.youtube.com/watch?v=tNxN21LWnmY  
+> Link:    
+> Category: #2-对外采访、演讲    
+> Tag:    
+> Editor: @杨不为     
 
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_19-03-56.png)  
@@ -203,9 +196,9 @@
 
 **17:52** 【田朴珺】 是啊。  
 
-**17:53** 【段永平】 我的广东话不能“讲”到人。  
+**17:53** 【段永平】 我的广东话不能“讲”到人。  （广东话）
 
-**17:54** 【田朴珺】 我也讲。  
+**17:54** 【田朴珺】 我也讲。  （广东话）
 
 **17:55** 【段永平】 他会讲。  
 
@@ -213,7 +206,7 @@
 
 **17:57** 【段永平】 他听得懂，可是他讲的广东话你听不懂。  
 
-**17:59** 【王石】 在香港帮灰面（注：可能是指朋友面）前用广东话点菜，点一个写一个，点一个说一个。我很得意，我讲的全听懂了吗？结果服务员用生硬的普通话说：“先生，你的普通话太差了。”  
+**17:59** 【王石】 在香港在朋友面前用广东话点菜，点一个写一个，点一个说一个。我很得意，我讲的全听懂了吗？结果服务员用生硬的普通话说：“先生，你的普通话太差了。”  
 
 **18:15** 【段永平】 哈哈哈。  
 
@@ -287,11 +280,7 @@
 
 **24:00** 【田朴珺】 我问你疼吗？他说还行，可以。我说你要不要去医院看？他说不用。我都说不用。然后我就发现说谁能摔断肋骨，难道没有那么疼吗？怎么这人还能跟我吃完中午饭后，然后还跟我很若无其事的样子说我有点累了，我回去休息一下。  
 
-**24:18** 【王石】 小黄你帮我查一下，这个月底有没有行程安排，我想去参加一场马拉松。  
-
-**24:27** 【小黄（秘书）】 王总怎么突然想去参加马拉松呢？  
-
-**24:30** 【王石】 也不是突然想去的，是我一直在关注中国移动全球通·逐马计划。这里面有好多国内热门马拉松赛事，直接通过中国移动APP全球通·逐马计划活动专区，完成任务收集抽签码，就可以自由绑定多场马拉松赛事。现在要抢场马拉松不容易的，太热门了。  
+（广告时间）
 
 ## part 2
 
