--- a/【文章目录】/2-对外演讲、采访/01-2004-万科财富人生-对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/01-2004-万科财富人生-对话段永平.md
@@ -1,6 +1,6 @@
 # 2004-万科财富人生-对话段永平
 
-> URLs:  https://www.bilibili.com/video/BV1ww411X7Pd  
+> URLs:  https://www.bilibili.com/video/BV1ww411X7Pd/?p=8     
 > Link:    
 > Category: #2-对外采访、演讲    
 > Tag:    
