--- a/【文章目录】/2-对外演讲、采访/04-2006-资本人物-专访段永平.md
+++ b/【文章目录】/2-对外演讲、采访/04-2006-资本人物-专访段永平.md
@@ -1,10 +1,10 @@
 # 2006-资本人物-专访段永平
 
-> URLs: https://www.bilibili.com/video/BV1ssW9zuESa   
-> Link:    
-> Category: #2-对外采访、演讲    
-> Tag:    
-> Editor: @杨不为     
+> URLs: https://www.bilibili.com/video/BV1ssW9zuESa/?p=3       
+> Link:       
+> Category: #2-对外采访、演讲      
+> Tag:      
+> Editor: @杨不为       
 
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_00-09-53.png)  
