--- a/【文章目录】/2-对外演讲、采访/06-2007-波士堂专访段永平，谈价值投资，上市，企业.md
+++ b/【文章目录】/2-对外演讲、采访/06-2007-波士堂专访段永平，谈价值投资，上市，企业.md
@@ -1,6 +1,6 @@
 # 2007-波士堂专访段永平，谈价值投资，上市，企业
 
-> URLs: https://www.bilibili.com/video/BV1ww411X7Pd    
+> URLs: https://www.bilibili.com/video/BV1ww411X7Pd/?p=2             
 > Link:    
 > Category: #2-对外采访、演讲    
 > Tag:    
