--- a/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
@@ -1,6 +1,6 @@
 # 2008-段永平浙大分享
 
-> URLs: https://www.bilibili.com/video/BV1ww411X7Pd   
+> URLs: https://www.bilibili.com/video/BV1ww411X7Pd/?p=7     
 > Link:    
 > Category: #2-对外采访、演讲    
 > Tag:    
