--- a/【文章目录】/2-对外演讲、采访/08-2010-网易财经-对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/08-2010-网易财经-对话段永平.md
@@ -1,6 +1,6 @@
 # 2010-网易财经-对话段永平
 
-> URLs:  https://www.bilibili.com/video/BV1ww411X7Pd  
+> URLs:  https://www.bilibili.com/video/BV1ww411X7Pd/?p=9  
 > Link:    
 > Category: #2-对外采访、演讲    
 > Tag:    
