add ai transtription statement

--- a/【文章目录】/2-对外演讲、采访/05-2006-网易财经专访段永平-谈和巴菲特共进午餐.md
+++ b/【文章目录】/2-对外演讲、采访/05-2006-网易财经专访段永平-谈和巴菲特共进午餐.md
@@ -9,6 +9,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_10-12-01.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:00** 【主持人】 目前中国股市牛气冲天，也变得越来越浮躁。卖房炒股、和尚炒股，这种不理性现象频频在媒体上见诸报端。网易财经借此机会特别推出大型策划——寻找中国的巴菲特。我们的目的是让广大股民朋友能更加理性的看待股市，能够稳健的投资。价值投资被实践证明是稳健盈利之道，而巴菲特是价值投资的代表人物，被奉为股神，是无数股民信奉的偶像。  
 
