--- a/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
+++ b/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
@@ -6,7 +6,7 @@
 > Tag:    
 > Editor: @杨不为     
 
-（编者按：未找到一手音视频资料，但此文章经过段永平本人网易博客评论区认证，截图见文末。）
+（编者按：未找到一手音视频资料，此文章经过段永平网易博客评论区认证”还行“，可能存在不准确之处。）
 # 2018年段永平斯坦福连答53问，核心是"不为清单"
 
 [www.huxiu.com](https://www.huxiu.com/article/265373.html) 虎嗅网  
@@ -258,7 +258,8 @@
 **段永平：** 我和黄峥10多年的朋友了，我了解他，我信任他！  
 
 ---
-编者按：未找到一手音视频资料，此文章经过段永平本人网易博客评论区认证：  
+
+编者按：未找到一手音视频资料，此文章经过段永平网易博客评论区认证”还行“，可能存在不准确之处。
 
 ![[PixPin_2026-01-19_12-38-36.png]]  
 ![[PixPin_2026-01-19_12-38-28.png]]  
