--- a/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/10-2025-段永平浙大分享.md
@@ -9,6 +9,7 @@
   
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_22-43-11.png)
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:00** 【男主持人】  
 那我们自己学生，比如在平常的学习方法中，以及未来的一些人生规划上，我们可以做出哪些适应时代的，特别是AI变化的，因时而变的一个想法？不知道段学长有没有什么想法？  
