--- a/【文章目录】/2-对外演讲、采访/11-2025-雪球-方三文对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/11-2025-雪球-方三文对话段永平.md
@@ -9,6 +9,7 @@
   
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_19-03-14.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:47** 【方三文】 大家好，我是方三文，雪球创始人、董事长，也是雪球上的不明真相的群众。我对自己的简介是：陪聊、陪赌。那么跟谁聊呢？有可能是跟上市公司的CEO聊，聊一聊他们公司的商业模式，他们的行业竞争力；也有可能是跟基金经理聊，聊他们的投资理念、投资框架和具体的投资行为；也有可能跟经济学家聊，聊一聊他们对经济形势的看法。那么呢，我可以把大家的问题带给他们，帮大家跟他们聊。也可以理解我是大家的代问人。  
 
