--- a/【文章目录】/2-对外演讲、采访/03-2006-秦朔专访段永平.md
+++ b/【文章目录】/2-对外演讲、采访/03-2006-秦朔专访段永平.md
@@ -9,6 +9,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-20-24.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:00** 【秦朔】  
 全世界第二富有的人，美国股神巴菲特，每年都通过竞标午餐的方式，为旧金山的一个慈善组织募款。今年竞标的中标者，是中国商界的风云人物，曾经打造了小霸王和步步高两大品牌的段永平先生。他以62万美金的价格，竞得了这场天价的午餐，同时呢，也成为社会的焦点人物。《会见财经界》今天就请到了段永平先生。  
