--- a/【文章目录】/2-对外演讲、采访/04-2006-资本人物-专访段永平.md
+++ b/【文章目录】/2-对外演讲、采访/04-2006-资本人物-专访段永平.md
@@ -9,6 +9,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_00-09-53.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:36** 【旁白】 资本人物之——段永平。  
 
