--- a/【文章目录】/2-对外演讲、采访/06-2007-波士堂专访段永平，谈价值投资，上市，企业.md
+++ b/【文章目录】/2-对外演讲、采访/06-2007-波士堂专访段永平，谈价值投资，上市，企业.md
@@ -9,6 +9,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-19-54.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:05** 【曹启泰】  
 他们分别是来自浙江大学以及交通大学的同学们、朋友们，欢迎大家。  
