--- a/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
@@ -11,6 +11,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-22-06.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:05** 【主持人】  
 欢迎大家来到自立成长与段永平学长面对面交流会的现场。首先请允许我荣幸地向大家介绍今天来到我们现场的各位老师，他们是来自发展联络办公室以及学工部的各位老师们，让我们用热烈的掌声欢迎他们。  
