--- a/【文章目录】/2-对外演讲、采访/08-2010-网易财经-对话段永平.md
+++ b/【文章目录】/2-对外演讲、采访/08-2010-网易财经-对话段永平.md
@@ -9,6 +9,7 @@
 
 ![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_23-29-31.png)  
 
+（声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
 **00:10** 【旁白】 他亲手缔造了两个知名品牌，却能急流勇退；他活跃于投资领域，被称为“中国的巴菲特”。  
 
