--- a/【文章目录】/1-核心-公司里程碑/01-1999-段永平-二十一世纪来了.md
+++ b/【文章目录】/1-核心-公司里程碑/01-1999-段永平-二十一世纪来了.md
@@ -35,11 +35,11 @@
 
 ---
 
-
-![[Pasted image 20260117144559.png]]  
+![](【文章目录】/1-核心-公司里程碑/attachments/Pasted%20image%2020260117144559.png)
+  
 
 
 ---
-![[PixPin_2026-01-17_15-13-20.png]]  
+  
 
-
+![](【文章目录】/1-核心-公司里程碑/attachments/PixPin_2026-01-17_15-13-20.png)
