--- a/【文章目录】/1-核心-公司里程碑/02-2001（推测）-步步高企业文化.md
+++ b/【文章目录】/1-核心-公司里程碑/02-2001（推测）-步步高企业文化.md
@@ -48,12 +48,12 @@
 
 不懈进取，步步登高，为用户提供令其完全满意的产品和服务，我们的“步步高”品牌，必须是高品质的象征。  
 
-![](【文章目录】/1-核心-公司里程碑/attachments/Pasted%20image%2020260117151156.png)
+![](attachments/Pasted%20image%2020260117151156.png)
 
-![](【文章目录】/1-核心-公司里程碑/attachments/Pasted%20image%2020260117151204.png)
+![](attachments/Pasted%20image%2020260117151204.png)
   
 
 ---
   
 
-![](【文章目录】/1-核心-公司里程碑/attachments/PixPin_2026-01-17_15-12-51.png)
+![](attachments/PixPin_2026-01-17_15-12-51.png)
