--- a/【文章目录】/1-核心-公司里程碑/07-2025-沈炜：步步高（vivo）30周年：坚守本分 基业长青.md
+++ b/【文章目录】/1-核心-公司里程碑/07-2025-沈炜：步步高（vivo）30周年：坚守本分 基业长青.md
@@ -6,7 +6,7 @@
 > Tag:  #本分 #诚信 #团队 #品质 #消费者导向 #企业文化 #平常心     
 
 
-![](【文章目录】/1-核心-公司里程碑/attachments/Pasted%20image%2020260117154235.png)
+![](attachments/Pasted%20image%2020260117154235.png)
 
 
 尊敬的阿段，亲爱的各位同事，各位代理老板及伙伴嘉宾们，各位老朋友和兄弟姐妹们：  
