--- a/【文章目录】/2-对外演讲、采访/02-2004（左右）-段永平北大总裁班演讲：企业的诚信意识.md
+++ b/【文章目录】/2-对外演讲、采访/02-2004（左右）-段永平北大总裁班演讲：企业的诚信意识.md
@@ -7,9 +7,9 @@
 > Editor: @杨不为     
 
 
-![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_10-58-12.png)  
+![](attachments/PixPin_2026-01-20_10-58-12.png)  
 
-![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-20_10-58-24.png)  
+![](attachments/PixPin_2026-01-20_10-58-24.png)  
 
 （声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
