--- a/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
+++ b/【文章目录】/2-对外演讲、采访/07-2008-段永平浙大分享.md
@@ -7,9 +7,9 @@
 > Editor: @杨不为     
 
 
-![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-21-05.png)  
+![](attachments/PixPin_2026-01-19_22-21-05.png)  
 
-![](【文章目录】/2-对外演讲、采访/attachments/PixPin_2026-01-19_22-22-06.png)  
+![](attachments/PixPin_2026-01-19_22-22-06.png)  
 
 （声明：转录文稿未经逐字人工校对，仅供参考，文本中可能存在错误、遗漏或不准确之处，一切内容请以原视频为准。）
 
