--- a/【文章目录】/1-核心-公司里程碑/03-2005-陈明永-步步高十周年记念文艺晚会讲话.md
+++ b/【文章目录】/1-核心-公司里程碑/03-2005-陈明永-步步高十周年记念文艺晚会讲话.md
@@ -5,6 +5,8 @@
 > Category: #1-核心-公司里程碑     
 > Tag:  #平常心 #本分 #做正确的事 #诚信      
 
+![](attachments/PixPin_2026-01-21_10-34-35.png)
+
 朱军兄刚才所讲的东西，我觉得很朴素，但是也是我们本分的一个部分。我们步步高企业创业十年以来，在企业的不同发展阶段，我们的总经理阿段讲述企业价值观，讲的最多的就是本分。  
 
 本分是我们企业核心价值观的中心，在这个地方我想讲讲我在他的训导下的一点理解，本分实际上是跟做正确的事情相联系的，在企业的经营过程中，做正确的事情是至关重要的。如果我们做的事情本来就不对的话，那再怎么努力，最后的结果也是必然不会成功。可见做正确的事情是很重要的。但是，做正确的事情，确实不容易的。  
