--- a/【文章目录】/1-核心-公司里程碑/04-2005-段永平-步步高十周年记念文艺晚会讲话.md
+++ b/【文章目录】/1-核心-公司里程碑/04-2005-段永平-步步高十周年记念文艺晚会讲话.md
@@ -5,6 +5,10 @@
 > Category: #1-核心-公司里程碑     
 > Tag:  #平常心 #本分 #做正确的事 #诚信      
 
+
+![](attachments/PixPin_2026-01-21_10-35-20.png)
+
+
 各位朋友晚上好，今天很荣幸我能够有机会在这个地方跟大家说几句话。  
 
 首先、我想再把我们刚才说的这个十周年“记念”晚会这两个字解释一下。“记”，就是要：记住过去我们干过的事情，不管是对是错。记住以后呢，就可以总结我们的经验和教训，对我们未来的发展会有好处。同时，我们还要“念叨”倒下去的竞争对手们，以及离开了我们的一些伙伴们。  
