--- a/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
+++ b/【文章目录】/2-对外演讲、采访/09-2018-段永平斯坦福交流.md
@@ -261,6 +261,6 @@
 
 编者按：未找到一手音视频资料，此文章经过段永平网易博客评论区认证”还行“，可能存在不准确之处。
 
-![[PixPin_2026-01-19_12-38-36.png]]  
-![[PixPin_2026-01-19_12-38-28.png]]  
+![PixPin_2026-01-19_12-38-36.png](attachments/PixPin_2026-01-19_12-38-36.png)  
+![PixPin_2026-01-19_12-38-28.png](attachments/PixPin_2026-01-19_12-38-28.png)  
 http://nteswjq.blog.163.com/blog/static/126998120187217140185  
